--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
     <H1>TIME CONVERTER</H1>
     <div class="form-group">
         <label><h3>Minutes:</h3></label>
-        <input class="form-control" type="number" id="inputMinutes" onchange="minConverter(this.value)"
+        <input class="form-control" type="number" id="inputMinutes" value="00" onchange="minConverter(this.value)"
             oninput="minConverter(this.value)">
     </div>
 
     <div class="form-group">
         <label><h3>Seconds:</h3></label>
-        <input class="form-control" type="number" id="inputSeconds" onchange="secConverter(this.value)"
+        <input class="form-control" type="number" id="inputSeconds" value="00"  onchange="secConverter(this.value)"
             oninput="secConverter(this.value)">
     </div>
     </div>
